<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/loginTypeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SubText"
        android:text="@string/token_login"
        android:layout_marginTop="@dimen/spacing_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/sessionSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTypeSwitch">


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SubText"
            android:layout_marginStart="8dp"
            android:text="@string/off"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginInfo"
            />


    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sessionSwitch">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/credentialGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="usernameTextField,passwordTextField"
            android:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:hint="@string/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toTopOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/spacing_tiny"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/usernameTextField"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tokenTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/token"
            android:visibility="gone"
            android:layout_marginTop="@dimen/spacing_tiny"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toTopOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/callerIdNameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_tiny"
        android:hint="@string/caller_id_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/loginInfo"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/callerIdNumberTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/caller_id_number"
        android:layout_marginTop="@dimen/spacing_tiny"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/callerIdNameTextField"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/spacing_normal"
        style="@style/AddProfileButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/callerIdNumberTextField"
        />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/spacing_normal"
        style="@style/TextButton"
        android:textColor="@color/portal_blue"
        android:layout_marginStart="@dimen/spacing_tiny"
        app:layout_constraintStart_toEndOf="@+id/signInButton"
        app:layout_constraintTop_toBottomOf="@+id/callerIdNumberTextField"
        />


</androidx.constraintlayout.widget.ConstraintLayout>