<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="org.telnyx.webrtc.xmlapp.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        >


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:src="@drawable/telnyx_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/loginInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            style="@style/HeaderText"
            android:text="@string/login_info"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/socketLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SubText"
            android:text="@string/socket"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginInfo"
            />

        <LinearLayout
            android:id="@+id/socketStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/socketLabel">


            <View
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:background="@drawable/status_circle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubText"
                android:layout_marginStart="8dp"
                android:text="@string/disconnected"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginInfo"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/sessionInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/spacing_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/socketStatus">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubText"
                android:text="@string/session_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginInfo"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubText"
                android:layout_marginTop="@dimen/spacing_tiny"
                android:text="@string/dash"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginInfo"
                />


        </LinearLayout>



        <RelativeLayout
            android:id="@+id/profileInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sessionInfo">

            <TextView
                android:id="@+id/profileLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubText"
                android:text="@string/profile"/>

            <TextView
                android:id="@+id/profileId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubTextDeep"
                android:layout_marginTop="@dimen/spacing_tiny"
                android:layout_below="@+id/profileLabel"
                android:text="xd34343"/>

            <Button
                android:id="@+id/outlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_toEndOf="@+id/profileId"
                android:text="@string/switch_profile"
                android:layout_below="@+id/profileLabel"
                android:textAllCaps="false"
                android:padding="1dp"
                style="@style/CustomOutlinedButton"
                />


        </RelativeLayout>

        <Button
            android:id="@+id/connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:textAllCaps="false"
            android:padding="1dp"
            app:layout_constraintTop_toBottomOf="@+id/profileInfo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/CustomPrimaryButton"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
