<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/spacing_normal"
    tools:context="org.telnyx.webrtc.xmlapp.login.LoginBottomSheetFragment">


    <RelativeLayout
        android:id="@+id/headerInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/HeaderTextLarge"
            android:text="@string/existing_profiles" />


        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/close_button_dessc"
            android:src="@drawable/ic_close"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/allProfiles"
        android:layout_marginTop="@dimen/spacing_tiny"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/headerInfo"/>

    <Button
        android:id="@+id/outlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/add_new_profile"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/spacing_normal"
        app:icon="@drawable/ic_add"
        style="@style/AddProfileButton"
        app:layout_constraintTop_toBottomOf="@+id/allProfiles"
        app:layout_constraintStart_toStartOf="parent"
        />



    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="Confirm"
        android:textSize="12sp"
        android:textAllCaps="false"
        style="@style/CustomPrimaryButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="@dimen/spacing_normal"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:layout_marginEnd="@dimen/spacing_tiny"
        android:layout_toStartOf="@+id/connect"
        style="@style/CustomOutlinedButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/connect"
        />







</androidx.constraintlayout.widget.ConstraintLayout>



