<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appStatus"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="0dp"
        android:padding="24dp"
        >


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/dash"
            android:src="@drawable/telnyx_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/loginInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            style="@style/HeaderText"
            android:text="@string/home_info"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/socketLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SubText"
            android:text="@string/socket"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginInfo"
            />

        <LinearLayout
            android:id="@+id/socketStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/socketLabel">


            <View
                android:id="@+id/socketStatusIcon"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:background="@drawable/status_circle" />

            <TextView
                android:id="@+id/socketStatusInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubText"
                android:layout_marginStart="8dp"
                android:text="@string/disconnected"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginInfo"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/sessionInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/spacing_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/socketStatus">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubText"
                android:text="@string/session_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginInfo"
                />

            <TextView
                android:id="@+id/sessionId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubText"
                android:layout_marginTop="@dimen/spacing_tiny"
                android:text="@string/dash"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginInfo"
                />

        </LinearLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintTop_toBottomOf="@+id/appStatus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:navGraph="@navigation/nav_graph" />

    <LinearLayout
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSecondary"
        android:alpha="0.5"
        android:gravity="center_horizontal|center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:indicatorColor="@color/telnyx_green"
            app:indicatorSize="48dp"
            app:trackColor="@color/white"
            app:trackThickness="4dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>