<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.redesign.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        >


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:src="@drawable/telnyx_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/loginInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            style="@style/HeaderText"
            android:text="@string/home_info"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/socketLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SubText"
            android:text="@string/socket"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginInfo"
            />

        <LinearLayout
            android:id="@+id/socketStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/socketLabel">


            <View
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:background="@drawable/status_circle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubText"
                android:layout_marginStart="8dp"
                android:text="@string/disconnected"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginInfo"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/sessionInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/spacing_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/socketStatus">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubText"
                android:text="@string/session_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginInfo"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubText"
                android:layout_marginTop="@dimen/spacing_tiny"
                android:text="@string/dash"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginInfo"
                />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/destinationInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/spacing_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sessionInfo">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubText"
                android:text="@string/destination"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginInfo"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_tiny"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/iconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/fab_transformation_scrim_behavior"
            app:srcCompat="@drawable/baseline_call_24"
            app:tint="@color/black"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/spacing_normal"
            app:layout_constraintTop_toBottomOf="@+id/destinationInfo"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_tiny"
            android:layout_marginTop="@dimen/spacing_normal"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/destinationInfo">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fab_transformation_scrim_behavior"
                app:srcCompat="@drawable/mute_24"
                app:tint="@color/black"
                android:elevation="0dp"
                app:elevation="0dp"
                android:backgroundTint="@color/colorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/destinationInfo"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/endCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_tiny"
                android:contentDescription="@string/fab_transformation_scrim_behavior"
                app:layout_constraintEnd_toEndOf="parent"
                android:elevation="0dp"
                app:elevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/destinationInfo"
                app:srcCompat="@drawable/baseline_call_end_24"
                android:backgroundTint="@color/reject_red"
                app:tint="@color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/loudSpeaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fab_transformation_scrim_behavior"
                app:srcCompat="@drawable/speaker_24"
                app:tint="@color/black"
                android:elevation="0dp"
                app:elevation="0dp"
                android:backgroundTint="@color/colorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/destinationInfo"
                />

        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
